PR Feedback and fixing references to master

--- a/packages/docs/docs/config.mdx
+++ b/packages/docs/docs/config.mdx
@@ -6,7 +6,7 @@ Monorepolint (mrl) requires a configuration file located at the root of your mon
 
 :::info Previous Configuration Format
 
-In earlier versions of monorepolint, the configuration file was named `monorepolint.config.ts`. Due to difficulties in maintaining TypeScript configurations that checked properly, particularly in Visual Studio Code, this format has been removed.
+In earlier versions of monorepolint, the configuration file was named `monorepolint.config.ts`. Due to difficulties in maintaining TypeScript configurations that type-checked properly, particularly in Visual Studio Code, this format has been removed.
 
 If you prefer to use TypeScript for your configuration, consider creating a separate project and referencing it from your root configuration file.
 
